--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="/my_profile/assets/fontawesome-free-5.15.3-web/css/all.css" rel="stylesheet">
-    <link rel="stylesheet" href="/my_profile/assets/bootstrap-4.5.3/dist/css/bootstrap.min.css">
+    <link href="my_profile/assets/fontawesome-free-5.15.3-web/css/all.css" rel="stylesheet">
+    <link rel="stylesheet" href="my_profile/assets/bootstrap-4.5.3/dist/css/bootstrap.min.css">
 
     <title>IFER | My Account</title>
-    <link href="/my_profile/profile.css" rel="stylesheet">
+    <link href="my_profile/profile.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Work+Sans%3A100%2C200%2C300%2Cregular%2C500%2C600%2C700%2C800%2C900%7CPoppins%3A300%2Cregular%2C500%2C600%2C700%2C900&amp;subset" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Poppins:600%2C700%2C400%2C500" rel="stylesheet" property="stylesheet" type="text/css">
 </head>
@@ -66,6 +66,7 @@
                 <h4>Ayush Kumar Chaudhary</h4>
                 <h5>ayushkumac040@gmail.com</h5>
                 <h5>Patna, Bihar, India</h5>
+                <div class="btm"><a href="#">Edit</a></div>
             </div>
         </div>
     </div>
@@ -78,7 +79,7 @@
 <!------ jquery ------>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <!------- script ------->
-    <script src="/my_profile/assets/bootstrap-4.5.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/my_profile/assets/bootstrap-4.5.3/dist/js/bootstrap.min.js"></script>
+    <script src="my_profile/assets/bootstrap-4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="my_profile/assets/bootstrap-4.5.3/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
