--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <h4>Ayush Kumar Chaudhary</h4>
                 <h5>ayushkumac040@gmail.com</h5>
                 <h5>Patna, Bihar, India</h5>
-                <div class="btm"><a href="#">Edit</a></div>
+                <div class="profile-edit"><a href="#"><i class="fas fa-pen"></i></a></div>
             </div>
         </div>
     </div>
