--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <a class="nav-link" href="#">Contact</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Login</a>
+                  <a class="nav-link" href="login-signup.html">Login</a>
                 </li>
               </ul>
             </div>
