--- a/login-signup.html
+++ b/login-signup.html
@@ -54,33 +54,33 @@
                     <form>
                         <div class="form-row upper">
                             <div class="form-group col-md-6 column">
-                              <input type="text" class="form-control" name="first-name" required>
+                              <input type="text" class="form-controling" name="first-name" required>
                               <label>First Name</label>
                               <div class="underline"></div>
                             </div>
                             <div class="form-group col-md-6 column">
-                              <input type="text" class="form-control" name="last-name" required>
+                              <input type="text" class="form-controling" name="last-name" required>
                               <label>Last Name</label>
                               <div class="underline"></div>
                             </div>
                         </div>
                         <div class="form-row">
                             <div class="form-group column">
-                                <input type="phone-number" class="form-control" name="phone-number" required>
+                                <input type="phone-number" class="form-controling" name="phone-number" required>
                                 <label>Phone Number</label>
                                 <div class="underline extra"></div>
                             </div>
                         </div>
                         <div class="form-row">
                             <div class="form-group column">
-                                <input type="email" class="form-control" name="email" required>
+                                <input type="email" class="form-controling" name="email" required>
                                 <label>Email</label>
                                 <div class="underline extra"></div>
                             </div>
                         </div>
                         <div class="form-row">
                             <div class="form-group column">
-                                <input type="password" class="form-control" name="password" required>
+                                <input type="password" class="form-controling" name="password" required>
                                 <label>Password</label>
                                 <div class="underline extra"></div>
                             </div>
