--- a/login-signup.html
+++ b/login-signup.html
@@ -15,104 +15,106 @@
 </head>
 <body id="login-signup">
     <div class="container content-design">
-        <div class="forthis">
-            <div class="tab-header">
-                <div for="login" class="login active">Sign In</div>
-                <div for="signup" class="signup">Sign Up</div>
-            </div>
-            <div class="tab-content">
-                <div action="#" class="login tab-body active">
-                    <form>
-                        <div class="form-row upper">
-                            <div class="form-group column">
-                                <input type="email" class="form-controling" name="email" id="email" required>
-                                <label>Email</label>
-                                <div class="underline extra"></div>
-                            </div>
-                        </div>
-                        <div class="form-row">
-                            <div class="form-group column">
-                                <input type="password" class="form-controling" name="password" required>
-                                <label>Password</label>
-                                <div class="underline extra"></div>
-                            </div>
-                        </div>
-                        <div class="form-element">
-                            <input type="checkbox" id="remember_me">
-                            <label for="remember_me">Remember me</label>
-                        </div>
-                        <div class="btn-sm">
-                            <a href="#"><button type="submit" class="sm-button">submit</button></a>
-                        </div>
-                        <div class="form-element down">
-                            <label><a href="#" class="link">Forgot Password ?</a></label><br>
-                            <label class="signup-link">Don't have an account? <a href="#" class="link">Sign Up</a></label>
-                        </div>
-                    </form>
+        <div class="row">
+            <div class="forthis">
+                <div class="tab-header">
+                    <div for="login" class="login active">Sign In</div>
+                    <div for="signup" class="signup">Sign Up</div>
                 </div>
-                <div action="#" class="signup tab-body">
-                    <form>
-                        <div class="form-row upper">
-                            <div class="form-group col-md-6 column">
-                              <input type="text" class="form-controling" name="first-name" required>
-                              <label>First Name</label>
-                              <div class="underline"></div>
+                <div class="tab-content">
+                    <div action="#" class="login tab-body active">
+                        <form>
+                            <div class="form-row upper">
+                                <div class="form-group column">
+                                    <input type="email" class="form-controling" name="email" id="email" required>
+                                    <label>Email</label>
+                                    <div class="underline extra"></div>
+                                </div>
                             </div>
-                            <div class="form-group col-md-6 column">
-                              <input type="text" class="form-controling" name="last-name" required>
-                              <label>Last Name</label>
-                              <div class="underline"></div>
+                            <div class="form-row">
+                                <div class="form-group column">
+                                    <input type="password" class="form-controling" name="password" required>
+                                    <label>Password</label>
+                                    <div class="underline extra"></div>
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-row">
-                            <div class="form-group column">
-                                <input type="phone-number" class="form-controling" name="phone-number" required>
-                                <label>Phone Number</label>
-                                <div class="underline extra"></div>
+                            <div class="form-element">
+                                <input type="checkbox" id="remember_me">
+                                <label for="remember_me">Remember me</label>
                             </div>
-                        </div>
-                        <div class="form-row">
-                            <div class="form-group column">
-                                <input type="email" class="form-controling" name="email" required>
-                                <label>Email</label>
-                                <div class="underline extra"></div>
+                            <div class="btn-sm">
+                                <a href="#"><button type="submit" class="sm-button">submit</button></a>
                             </div>
-                        </div>
-                        <div class="form-row">
-                            <div class="form-group column">
-                                <input type="password" class="form-controling" name="password" required>
-                                <label>Password</label>
-                                <div class="underline extra"></div>
+                            <div class="form-element down">
+                                <label><a href="#" class="link">Forgot Password ?</a></label><br>
+                                <label class="signup-link">Don't have an account? <a href="#" class="link">Sign Up</a></label>
                             </div>
-                        </div>
-                        <div class="btn-sm">
-                            <a href="#"><button type="submit" class="sm-button">submit</button></a>
-                        </div>
-                        <div class="form-element down">
-                            <label class="login-link">Have an account? <a href="#" class="link">Sign In</a></label>
-                        </div>
-                    </form>
+                        </form>
+                    </div>
+                    <div action="#" class="signup tab-body">
+                        <form>
+                            <div class="form-row upper">
+                                <div class="form-group col-md-6 column">
+                                <input type="text" class="form-controling" name="first-name" required>
+                                <label>First Name</label>
+                                <div class="underline"></div>
+                                </div>
+                                <div class="form-group col-md-6 column">
+                                <input type="text" class="form-controling" name="last-name" required>
+                                <label>Last Name</label>
+                                <div class="underline"></div>
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="form-group column">
+                                    <input type="phone-number" class="form-controling" name="phone-number" required>
+                                    <label>Phone Number</label>
+                                    <div class="underline extra"></div>
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="form-group column">
+                                    <input type="email" class="form-controling" name="email" required>
+                                    <label>Email</label>
+                                    <div class="underline extra"></div>
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="form-group column">
+                                    <input type="password" class="form-controling" name="password" required>
+                                    <label>Password</label>
+                                    <div class="underline extra"></div>
+                                </div>
+                            </div>
+                            <div class="btn-sm">
+                                <a href="#"><button type="submit" class="sm-button">submit</button></a>
+                            </div>
+                            <div class="form-element down">
+                                <label class="login-link">Have an account? <a href="#" class="link">Sign In</a></label>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div> 
-    </div>
 
-    <div class="alert hide">
-        <span class="fas fa-check-circle" id="success"></span>
-        <span class="fas fa-times-circle" id="error"></span>
-        <span class="fas fa-exclamation-circle" id="warning"></span>
-        <!-- <span class="msg">Warning: This is a warning alert!</span> -->
-        <span id="span1">You have logged in successfully!</span>
-        <span id="span2">Enter a Valid Email Address</span>
-	    <span id="span3">This field can't be Empty</span>
-        <div class="close-btn" id="cls1">
-          <span class="fas fa-times"></span>
-        </div>
-        <div class="close-btn" id="cls2">
-            <span class="fas fa-times"></span>
-        </div>
-        <div class="close-btn" id="cls3">
-            <span class="fas fa-times"></span>
+        <div class="alert hide">
+            <span class="fas fa-check-circle" id="success"></span>
+            <span class="fas fa-times-circle" id="error"></span>
+            <span class="fas fa-exclamation-circle" id="warning"></span>
+            <!-- <span class="msg">Warning: This is a warning alert!</span> -->
+            <span id="span1">You have logged in successfully!</span>
+            <span id="span2">Enter a Valid Email Address</span>
+            <span id="span3">This field can't be Empty</span>
+            <div class="close-btn" id="cls1">
+              <span class="fas fa-times"></span>
+            </div>
+            <div class="close-btn" id="cls2">
+                <span class="fas fa-times"></span>
+            </div>
+            <div class="close-btn" id="cls3">
+                <span class="fas fa-times"></span>
+            </div>
         </div>
     </div>
 
