--- a/index.html
+++ b/index.html
@@ -25,7 +25,23 @@
         </nav>
         <div class="content">
             <section class="active">
-                
+                <div class="row">
+                  <div class="image">
+                    <img src="my_profile/img/undraw_profile_pic_ic5t.png">
+                    <span class="profile-edit"><a href="#"><i class="fas fa-pen"></i></a></span>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="container-fluid">
+                    <div class="details">
+                      <h6>Ayush068</h6>
+                      <h4>Ayush Kumar Chaudhary</h4>
+                      <h5>ayushkumac040@gmail.com</h5>
+                      <h5>+91 - 93348XXXXX</h5>
+                      <h5>Patna, Bihar, India</h5>
+                  </div>
+                  </div>
+                </div>
             </section>
             <section>
                 
