--- a/login-signup.html
+++ b/login-signup.html
@@ -127,7 +127,7 @@
           const form = document.getElementById("form");
           const email = document.getElementById("email").value;
           const indicator = document.getElementById("emailvar");
-          const pattern = /^[^ ]+@[^ ]+\.[a-z]{2,3}$/
+          const pattern = /^[^ ]+@[^ ]+\.[a-z]{2,3}$/;
 
           if(email.match(pattern)) {
             form.classList.add("valid");
